jellyfin/jellyfin-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f jellyfin.yaml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
    metallb.universe.tf/allow-shared-ip: "jellyfin"
  creationTimestamp: null
  labels:
    io.kompose.service: jellyfin-tcp
  name: jellyfin-tcp
spec:
  loadBalancerIP: 192.168.1.196
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
    - name: "8920"
      port: 8920
      targetPort: 8920
  selector:
    io.kompose.service: jellyfin
  type: LoadBalancer
status:
  loadBalancer: {}
