jellyfin/jellyfin-udp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f jellyfin.yaml
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
    metallb.universe.tf/allow-shared-ip: "jellyfin"
  creationTimestamp: null
  labels:
    io.kompose.service: jellyfin-udp
  name: jellyfin-udp
spec:
  loadBalancerIP: 192.168.1.196
  ports:
    - name: "7359"
      port: 7359
      protocol: UDP
      targetPort: 7359
    - name: "1900"
      port: 1900
      protocol: UDP
      targetPort: 1900
  selector:
    io.kompose.service: jellyfin
  type: LoadBalancer
status:
  loadBalancer: {}
