jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: autopirate
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jellyfin.epricesx.duckdns.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: jellyfin-tcp
            port:
              number: 8096
